popularity-contest (1.58) UNRELEASED; urgency=low

  * Move examples script to examples subdirectory.
    - Add gensections.pl
    - Do not install clean-filter/clean-genpkglist
    - rename popcon-submit.cgi to popcon.cgi

 -- Bill Allombert <ballombe@debian.org>  Sat, 18 May 2013 23:18:28 +0200

popularity-contest (1.57) unstable; urgency=low

  * Please note when reading stats that wheezy was released with 1.56.
  * debian/control:
    - Fix grammar in Description. Closes: #699538 Thanks Chris Bannister.
  * popcon.pl:
    - add popcon version of wheezy
  [ Christian Perrier ]
  [ Debconf translations ] 
  * Kannada (Mallikarjuna).  Closes: #694411

 -- Bill Allombert <ballombe@debian.org>  Sun, 05 May 2013 21:21:15 +0200

popularity-contest (1.56) unstable; urgency=low

  [ Christian Perrier ]
  [ Debconf translations ] 
  * Latvian (Rūdolfs Mazurs).  Closes: #674661
  * Lithuanian (Rimas Kudelis).  Closes: #675629
  * Galician (Jorge Barreiro).  Closes: #676988
  * Welsh (Daffyd Tomos).
  * Uyghur (Sahran).  Closes: #627009

 -- Bill Allombert <ballombe@debian.org>  Tue, 25 Sep 2012 21:13:44 +0200

popularity-contest (1.55) unstable; urgency=low

  * popularity-contest: fix multi-arch support:
    - Temporarily revert change from 1.53:
      'Find package files lists by running dpkg -L by batches.'
      (dpkg -L does not provide a stable interface across upgrade).
    - Instead add '$package:*.list' to the list of filelists. Closes: #660712
    - Reject files in subdirectories of */lib/<triplet> since they are read
      by ldconfig now.
  * FAQ: remove documentation relevant to pre-etch systems.

 -- Bill Allombert <ballombe@debian.org>  Tue, 22 May 2012 22:10:42 +0200

popularity-contest (1.54) unstable; urgency=low

  [ Bill Allombert ]
  * README: mention move to subversion.
  * popanal.py: sync with popcon.debian.org version: 
    - sort packages by name in all-popcon-results to prevent data leak.