@@ -2,12 +2,14 @@
 
 Q) What information is reported by popularity-contest ?
 
-A) popularity-contest reports the system architecture you use, the version of
-   popularity-contest you use and the list of packages installed on your
-   system. For each package, popularity-contest looks at the most recently used
-   (based on atime) files, and reports the filename, its last access time
-   (atime) and last change time (ctime). However, some files are not
-   considered, because they have unreliable atime.
+A) popularity-contest reports the system vendor [1], the system architecture
+   you use, the version of popularity-contest you use and the list of packages
+   installed on your system. For each package, popularity-contest looks at the
+   most recently used (based on atime) files, and reports the filename, its
+   last access time (atime) and last change time (ctime).  However, some files
+   are not considered, because they have unreliable atime.
+
+   [1] i.e. the dpkg Vendor field, see dpkg-vendor(1).
 
 Q) What is considered a 'vote' for a package ?
 
